--- a/product-catalog-microservice/pom.xml
+++ b/product-catalog-microservice/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.2.RELEASE</version>
+		<version>2.5.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -39,15 +39,15 @@
 			<artifactId>spring-boot-starter-data-cassandra</artifactId>
 			<exclusions>
 				<exclusion>
-					<groupId>com.datastax.cassandra</groupId>
-   					<artifactId>cassandra-driver-core</artifactId>
+					<groupId>com.datastax.oss</groupId>
+   					<artifactId>java-driver-core</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
-		  <groupId>com.yugabyte</groupId>
-		  <artifactId>cassandra-driver-core</artifactId>
-		  <version>3.8.0-yb-5</version>
+		    <groupId>com.yugabyte</groupId>
+		    <artifactId>java-driver-core</artifactId>
+		    <version>4.6.0-yb-9</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
