--- a/product-catalog-microservice/src/main/resources/application.properties
+++ b/product-catalog-microservice/src/main/resources/application.properties
@@ -3,4 +3,7 @@ logging.level.org.springframework.web=INFO
 spring.data.cassandra.keyspace-name=cronos
 spring.data.cassandra.contact-points=127.0.0.1
 spring.data.cassandra.port=9042
+spring.data.cassandra.local-datacenter=datacenter1
+spring.data.cassandra.load-balancing-policy=PartitionAwarePolicy
+spring.data.cassandra.request.timeout=60s
 server.port=8082
